# 3d_experiments

./: .gitignore  CMakeLists.txt  Camera.cc  Camera.hh  MatrixStack.cc  MatrixStack.hh  Mesh.cc  Mesh.hh  Model.cc  Model.hh  Program.cc  Program.hh  Projection.cc  Projection.hh  README.md  Scene.cc  Scene.hh  Texture2D.cc  Texture2D.hh  VertexFormat.cc  VertexFormat.hh  config.hh  first_pass.frag  first_pass.vert  gen_vs2019.cmd  main.cc  settings.json  textured_cube_gl.sln  textured_cube_gl.vcxproj  textured_cube_gl.vcxproj.filters  vs-chromium-project.txt
.github/workflows/: ccpp.yml
include/xrndr/: Camera.hh  Light.hh  Material.hh  MatrixStack.hh  Mesh.hh  Model.hh  Program.hh  Projection.hh  Scene.hh  Settings.hh  Texture2D.hh  Texture2DLoader.hh  TextureCache.hh  VertexFormat.hh  config.hh  json.hh
include/xrndr/async/: Async.hh
include/xrndr/detail/: Stack.hh
resources/materials/: pbr_sphere_gold.json  pbr_sphere_iron.json  pbr_sphere_leather.json  pbr_sphere_pvc.json
resources/models/: cube.mtl  pbr_sphere_gold.mtl  pbr_sphere_iron.mtl  pbr_sphere_leather.mtl  pbr_sphere_pvc.mtl  sphere.mtl  terrain.mtl  torus.mtl
resources/shaders/: first_pass.frag  first_pass.vert  nontextured_geometry.frag  nontextured_geometry.vert  postprocess.frag  postprocess.vert
xrndr/: Camera.cc  MatrixStack.cc  Mesh.cc  Model.cc  Program.cc  Projection.cc  Scene.cc  Settings.cc  Texture2D.cc  Texture2DLoader.cc  TextureCache.cc  json.cc  main.cc
xrndr/async/: Async.cc
xrndr/detail/: stb.cc
